[package]
name = "lay-simulator-gk"
version = "0.1.0"
authors = ["gyu-don <takumi.kt+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lay = { path = "../lay" }
rand_xorshift = "0.2.0"
rand_core = "0.5.1"

[dev-dependencies]
lay-simulator-blueqat = { path = "../lay-simulator-blueqat" }
tokio = { version = "0.2.21", features = ["rt-core", "rt-threaded", "blocking", "macros"] }
